1.5.2
Cleaned up folders.
Added strip to install.
Renamed KKEditQTProgressBar to kkeditqtprogressbar.
Fixed makefile minor install errors.
Added tagreader helper.

1.5.1
Tidied up DocumentationPlugin menu.
Added run all searches menuitem to DocumentationPlugin ( WARNING run all on a common term like 'contains' can be time consuming ).
Plugin Prefs dialog now doesn't close on 'Apply'.
Updates to DocumentationPlugin actions.
'Search For Define' now uses ( caseless ) regex.
Speed updates to function definition search.
Fixed setting back history when seleecting from combobox in Select Definition dialog.
Don't auto select 1st item from combobox in Select Definition dialog.
Made Select Definition dialog non modal.
Set OK button focus on Select Definition dialog
Fixed restoring autosave session from cli ( use:kkeditqt -r "autosave" ).
Improvments to search for define toolbar box.
Removed need for two pass build.
Forced use docset options when building docs ( needed for Tokens.xml file ).
Redone search in documentation.
Added MakeDocSet to resources.
Added build docset to file menu.
Use two passes for doxygen for extra data for offline search.
Updated doxygen config for docsets.
Fixed building pole with wrong version of QT.
Added "Raise docviewer" menuitem to "View" menu.
Custom command menu text now shows command to run.
Added custom command to DocumentationPlugin API menu.
Started documeting DocumentationPlugin formats.
Closed plugin prefs dialog when selecting help from the plugs about menu.
Fancied up buildplugs script.
Fixed plugins segfaulting when needing setsensitive after initing.
Added various searches to  DocumentationPlugin.
Removed unneded search code.
Removed toolbar line entry's for search qt/gtk apis.
Set doc instance in plugData when when doing setsensitive.
Set DocumentationPlugin menu in nav menu enabled.
Jump straight to link if only one result from DocumentationPlugin.
Sort DocumentationPlugin infos.