@@ -9,5 +9,4 @@ improve external tools
 
 this->htmlURI=QString("https://duckduckgo.com/?q=%1&ia=web").arg(searchfor);
 
-
-
+update docs.
